Finished README and analysis.

--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,174 +53,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10700.0</td>\n",
-       "      <td>7.672</td>\n",
-       "      <td>52800</td>\n",
-       "      <td>0.431818</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22800</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8400.0</td>\n",
-       "      <td>6.692</td>\n",
-       "      <td>43600</td>\n",
-       "      <td>0.311927</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13600</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>6.963</td>\n",
-       "      <td>46100</td>\n",
-       "      <td>0.349241</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16100</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10700.0</td>\n",
-       "      <td>7.664</td>\n",
-       "      <td>52700</td>\n",
-       "      <td>0.430740</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22700</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10800.0</td>\n",
-       "      <td>7.698</td>\n",
-       "      <td>53000</td>\n",
-       "      <td>0.433962</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
-       "0    10700.0          7.672            52800        0.431818                5   \n",
-       "1     8400.0          6.692            43600        0.311927                3   \n",
-       "2     9000.0          6.963            46100        0.349241                3   \n",
-       "3    10700.0          7.664            52700        0.430740                5   \n",
-       "4    10800.0          7.698            53000        0.433962                5   \n",
-       "\n",
-       "   derogatory_marks  total_debt  loan_status  \n",
-       "0                 1       22800            0  \n",
-       "1                 0       13600            0  \n",
-       "2                 0       16100            0  \n",
-       "3                 1       22700            0  \n",
-       "4                 1       23000            0  "
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Import the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loan_size</th>\n",
-       "      <th>interest_rate</th>\n",
-       "      <th>borrower_income</th>\n",
-       "      <th>debt_to_income</th>\n",
-       "      <th>num_of_accounts</th>\n",
-       "      <th>derogatory_marks</th>\n",
-       "      <th>total_debt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>32815</th>\n",
-       "      <td>8200.0</td>\n",
-       "      <td>6.598</td>\n",
-       "      <td>42700</td>\n",
-       "      <td>0.297424</td>\n",
+       "      <th>77531</th>\n",
+       "      <td>19100.0</td>\n",
+       "      <td>11.261</td>\n",
+       "      <td>86600</td>\n",
+       "      <td>0.653580</td>\n",
+       "      <td>12</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59572</th>\n",
-       "      <td>10500.0</td>\n",
-       "      <td>7.591</td>\n",
-       "      <td>52000</td>\n",
-       "      <td>0.423077</td>\n",
-       "      <td>4</td>\n",
+       "      <td>56600</td>\n",
        "      <td>1</td>\n",
-       "      <td>22000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42325</th>\n",
-       "      <td>7600.0</td>\n",
-       "      <td>6.351</td>\n",
-       "      <td>40400</td>\n",
-       "      <td>0.257426</td>\n",
+       "      <th>77532</th>\n",
+       "      <td>17700.0</td>\n",
+       "      <td>10.662</td>\n",
+       "      <td>80900</td>\n",
+       "      <td>0.629172</td>\n",
+       "      <td>11</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39070</th>\n",
-       "      <td>9700.0</td>\n",
-       "      <td>7.254</td>\n",
-       "      <td>48900</td>\n",
-       "      <td>0.386503</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42524</th>\n",
-       "      <td>11800.0</td>\n",
-       "      <td>8.155</td>\n",
-       "      <td>57300</td>\n",
-       "      <td>0.476440</td>\n",
-       "      <td>6</td>\n",
+       "      <td>50900</td>\n",
        "      <td>1</td>\n",
-       "      <td>27300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77533</th>\n",
+       "      <td>17600.0</td>\n",
+       "      <td>10.595</td>\n",
+       "      <td>80300</td>\n",
+       "      <td>0.626401</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77534</th>\n",
+       "      <td>16300.0</td>\n",
+       "      <td>10.068</td>\n",
+       "      <td>75300</td>\n",
+       "      <td>0.601594</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77535</th>\n",
+       "      <td>15600.0</td>\n",
+       "      <td>9.742</td>\n",
+       "      <td>72300</td>\n",
+       "      <td>0.585062</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42300</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -225,73 +113,159 @@
       ],
       "text/plain": [
        "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
-       "32815     8200.0          6.598            42700        0.297424   \n",
-       "59572    10500.0          7.591            52000        0.423077   \n",
-       "42325     7600.0          6.351            40400        0.257426   \n",
-       "39070     9700.0          7.254            48900        0.386503   \n",
-       "42524    11800.0          8.155            57300        0.476440   \n",
+       "77531    19100.0         11.261            86600        0.653580   \n",
+       "77532    17700.0         10.662            80900        0.629172   \n",
+       "77533    17600.0         10.595            80300        0.626401   \n",
+       "77534    16300.0         10.068            75300        0.601594   \n",
+       "77535    15600.0          9.742            72300        0.585062   \n",
        "\n",
-       "       num_of_accounts  derogatory_marks  total_debt  \n",
-       "32815                2                 0       12700  \n",
-       "59572                4                 1       22000  \n",
-       "42325                2                 0       10400  \n",
-       "39070                4                 0       18900  \n",
-       "42524                6                 1       27300  "
+       "       num_of_accounts  derogatory_marks  total_debt  loan_status  \n",
+       "77531               12                 2       56600            1  \n",
+       "77532               11                 2       50900            1  \n",
+       "77533               11                 2       50300            1  \n",
+       "77534               10                 2       45300            1  \n",
+       "77535                9                 2       42300            1  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Split the data into X_train, X_test, y_train, y_test"
+    "# Import the data\n",
+    "data = pd.read_csv('Resources/lending_data.csv')\n",
+    "data.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9908171687990095"
+       "(77536, 8)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train a Logistic Regression model print the model score"
+    "# Check the shape of the dataset\n",
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9910751134956666"
+       "(72307, 8)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train a Random Forest Classifier model and print the model score"
+    "# Check for duplicates\n",
+    "duplicates = data[data.duplicated()]\n",
+    "duplicates.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction\n",
+    "\n",
+    "This dataset is already preprocessed. There are duplicate values but that makes sense in the scope of this problem. It is a little suspicious that there are so many duplicate rows but since it is theoretically possible, it's best to not drop any data. Since all of the data is numeric, Logistic Regression should perform well. I suspect Random Forests to perform slightly better since there are many features involved and the Random Forest methon generally has the edge when we're comparing more variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into X_train, X_test, y_train, y_test\n",
+    "X = data.drop('loan_status', axis = 1)\n",
+    "y = data['loan_status']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 1)\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9942908240473243\n",
+      "Testing Score: 0.9936545604622369\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Logistic Regression model print the model score\n",
+    "clf = LogisticRegression().fit(X_train_scaled, y_train)\n",
+    "print(f'Training Score: {clf.score(X_train_scaled, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_test_scaled, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9975409272252029\n",
+      "Testing Score: 0.9916941807676434\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model and print the model score\n",
+    "clf = RandomForestClassifier(random_state = 0, n_estimators = 500).fit(X_train_scaled, y_train)\n",
+    "print(f'Training Score: {clf.score(X_train_scaled, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_test_scaled, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Contrary to my prediction, it seems as though the logistic regression performed slightly better but only by .02%. It is likely that the random forests method would perform better after tweaking some of the parameters but since they are both receiving scores of 99% and logistic regression is much faster, it's unlikely that it would be worth it in this case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
